Don't show on focus. Fixes problem with tooltip getting 'stuck' when hovering/clicking buttons

--- a/src/hint-core.scss
+++ b/src/hint-core.scss
@@ -34,8 +34,7 @@
 		@include vendor('transition-delay', $hideDelay);
 	}
 
-	&:hover:before, &:hover:after,
-	&:focus:before, &:focus:after {
+	&:hover:before, &:hover:after {
 		visibility: visible;
 		opacity: 1;
 	}
